// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-entries build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1c006fe363b9850ad73d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-987ef7c089c39d525863.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-9f34519d79bdec5cb756.js\\" crossorigin=\\"anonymous\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1c006fe363b9850ad73d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-987ef7c089c39d525863.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-9f34519d79bdec5cb756.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries build should generate the expected files 1`] = `
Object {
  "4-2434988453e9e04ec823.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "details-6c8d7afb3c7b045262fd.css": "._91MnZhe{color:blue}
",
  "details-c9c3d1a4b7369ef58b9f.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "home-62bf94bf0fd2ba3c2aa2.css": "._1QX0Hyt{color:red}
",
  "home-9f34519d79bdec5cb756.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/details-6c8d7afb3c7b045262fd.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1c006fe363b9850ad73d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-987ef7c089c39d525863.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/details-c9c3d1a4b7369ef58b9f.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "production/au/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1c006fe363b9850ad73d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-987ef7c089c39d525863.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-9f34519d79bdec5cb756.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "production/nz/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/details-6c8d7afb3c7b045262fd.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->nz<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1c006fe363b9850ad73d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-987ef7c089c39d525863.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/details-c9c3d1a4b7369ef58b9f.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "production/nz/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->nz</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1c006fe363b9850ad73d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-987ef7c089c39d525863.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-9f34519d79bdec5cb756.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "runtime-1c006fe363b9850ad73d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~details~home-987ef7c089c39d525863.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-entries start should render details page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/details.css\\">
  <script charset=\\"utf-8\\" src=\\"/0.js\\"></script></head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->ID: 123<span>Some special async content</span></h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/details.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/details.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/details.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries start should render home page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/home.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/home.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/home.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/home.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
